--- a/Lab1/Lab1.vcxproj.filters
+++ b/Lab1/Lab1.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClCompile Include="Lab1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="newsourcefile.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
